# vita-platform

./: CLAUDE.md  CLAUDE_CODE_PROMPT.md  Diagnostic Complet VITA.md  Makefile  PROMPT_COURT.md  PROMPT_SETUP_BACKEND.md  README.md  VITA_DIAGNOSTIC.md  VITA_DIAGNOSTIC_APRES.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test_api.sh
services/vita-core/: .gitignore  Cargo.toml  README.md  SETUP.md
services/vita-core/migrations/: 001_initial.sql  002_credit_loans.sql  003_codex.sql  004_codex_seed.sql  005_auth.sql  006_governance.sql  007_verification.sql  008_audit.sql  009_crypto.sql  010_confidential.sql  011_identity_providers.sql  012_identity_provider_verification.sql  013_web_of_trust.sql  014_email_verification_tokens.sql  015_notifications.sql  016_password_reset_tokens.sql  017_forge.sql  018_delegations.sql  019_seed_admin.sql  020_forge_v2.sql
services/vita-core/src/: error.rs  main.rs
services/vita-core/src/api/: accounts.rs  audit.rs  auth.rs  codex.rs  credit.rs  crypto.rs  emissions.rs  forge.rs  governance.rs  health.rs  identity.rs  mod.rs  notifications.rs  statistics.rs  transactions.rs  valuation.rs
services/vita-core/src/audit/: mod.rs
services/vita-core/src/auth/: jwt.rs  middleware.rs  password.rs
services/vita-core/src/codex/: mod.rs
services/vita-core/src/config/: mod.rs
services/vita-core/src/credit/: eligibility.rs  mod.rs  mutual.rs
services/vita-core/src/crypto/: commitments.rs  keys.rs  merkle.rs  mod.rs  range_proofs.rs  signatures.rs
services/vita-core/src/governance/: mod.rs  (+5 more)
(+239 files in other folders)
