[package]
name = "vita-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
regex = "1"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
curve25519-dalek = { version = "4", features = ["serde"] }
bulletproofs = "5"
merlin = "3"
genpdf = "0.2"
futures = "0.3"
